--- a/style.css
+++ b/style.css
@@ -69,24 +69,27 @@ padding-top: 3%;
    font-weight: bold;
    font-family: 'Lobster', cursive;
  }
- .btn button{
+  button{
        font-size: 15px;
-       padding: 5px 14px;
-      border-radius:22px ;
+       padding: 5px 10px 5px 10px;
+       border-radius:22px ;
       font-weight: bold;
-      color: black;
       background-color:#ff004f;
       cursor:pointer;
-     
- 
+     }
+
+ .btn{
+   margin-top: 20px;
+   margin-left: 5%;
  }
- .btn{ 
-      margin-top: 20px;
-      margin-left: 5%;
-      padding-bottom: 20px;
+ .btn1{
+   margin-left: 0%;
+   margin-top: 20px;
+
  }
  
- .btn button:hover{
+ 
+ button:hover{
   background-color:white;
    color: black; 
  }
@@ -109,13 +112,13 @@ padding-top: 3%;
 .skill{
    width:100%;
    height:6px;
-   background-color:green;
+   background-color:rgb(0, 128, 34);
    border:2px solid;
    
 }
 .skillscontainer{
    padding:12px;
-   margin-left: 5%;
+  
 }
 .skillscontainer h1 {
 text-align: center;
@@ -129,24 +132,37 @@ font-family: 'Lobster', cursive;
    margin-top: 12px;
    margin-right:30% ;
    margin-left: 5%;
+  font-size: 25px;
 }
-.project{
+.projectcontainer{
    margin-left: 5%;
    padding-top:10px;
 }
 .project1{
    font-size: 25px;
    font-weight: bold;
-   margin-top: 10px;
+   margin-top: 20px;
+   display:inline-block;
+   
+   
+   
 }
 .projectrole{
    font-size: 20px;
+   margin-right: 30%;
+   margin-top: 5px;
+
+   
+  
    
 }
 
-.project h2{
+.projectcontainer h1{ 
+   text-align: center;
    font-size:35px ;
    font-family: 'Lobster', cursive;
+   
+   
 }
 
 .contactcontainer{
