--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ padding-top: 3%;
    
 }
 .skillscontainer{
-   padding:12px;
+ 
+   margin-right: 30%;
   
 }
 .skillscontainer h1 {
@@ -126,13 +127,15 @@ font-size: 50px;
 font-weight: bold;
 font-family: 'Lobster', cursive;
 }
+
 .skillitem{
-   display:flex;
-   align-items: center;
-   margin-top: 12px;
-   margin-right:30% ;
-   margin-left: 5%;
-  font-size: 25px;
+   display:inline-block;
+   background-color: #ff004f;
+   margin-left: 60px;
+   margin-top: 30px;
+   border-radius:15px ;
+   padding: 5px 10px 5px 10px;
+   font-size: 25px;
 }
 .projectcontainer{
    margin-left: 5%;
